--- a/index.html
+++ b/index.html
@@ -225,11 +225,10 @@
               <p>
                 <a href="docs/notes/[量子力学]学习笔记.pdf"
                   >[zh] 量子力学学习笔记</a
-                ><br /><a href="docs/notes/[量子力学]期末偷分宝典.pdf"
+                ><br />
+                <a href="docs/notes/[量子力学]期末偷分宝典.pdf"
                   >[zh] 量子力学期末复习笔记</a
-                >
-              </p>
-              <p>
+                ><br />
                 <a href="docs/notes/[高等量子力学]课堂笔记.pdf"
                   >[zh] 高等量子力学学习笔记</a
                 >
@@ -250,10 +249,7 @@
               <p>
                 <a href="docs/notes/[量子光学]学习笔记.pdf"
                   >[zh] 量子光学学习笔记</a
-                >
-              </p>
-              <p>
-                <a href="docs/notes/[量子光学]复习笔记.pdf"
+                ><br /><a href="docs/notes/[量子光学]复习笔记.pdf"
                   >[zh] 量子光学期末复习笔记</a
                 >
               </p>
