--- a/index.html
+++ b/index.html
@@ -216,6 +216,11 @@
               <p>
                 <a href="docs/notes/[数学物理方程]课堂笔记.pdf"
                   >[zh] 数学物理方程学习笔记</a
+                ><br /><a
+                  href="docs/notes/notes-on-mathematical-methods-for-physicists.pdf"
+                  >[en] Notes on mathemetical methods for physicists</a
+                ><br /><a href="docs/notes/revision-for-2024-mmp-exam.pdf"
+                  >[en] Revision for 2024 MMP exam</a
                 >
               </p>
             </section>
