--- a/index.html
+++ b/index.html
@@ -205,9 +205,9 @@
               <span class="icon style2 major fa-gem"></span>
               <h3>Quantum Information</h3>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi
-                dui turpis, cursus eget orci amet aliquam congue semper. Etiam
-                eget ultrices risus nec tempor elit.
+                <a href="docs/notes/notes-on-quantum-information.pdf"
+                  >[en] Note on quantum information</a
+                >
               </p>
             </section>
             <section>
@@ -244,7 +244,7 @@
               <h3>Classical Mechanics</h3>
               <p>
                 <a href="docs/notes/note-on-classical-mechanics.pdf"
-                  >[en] Classical Mechanics</a
+                  >[en] Note on classical mechanics</a
                 >
               </p>
             </section>
