--- a/index.html
+++ b/index.html
@@ -256,6 +256,8 @@
                   >[zh] 量子光学学习笔记</a
                 ><br /><a href="docs/notes/[量子光学]复习笔记.pdf"
                   >[zh] 量子光学期末复习笔记</a
+                ><br /><a href="docs/notes/notes-on-quantum-optics.pdf"
+                  >[en] Note on quantum optics</a
                 >
               </p>
             </section>
