--- a/index.html
+++ b/index.html
@@ -240,6 +240,9 @@
               <p>
                 <a href="docs/notes/note-on-classical-mechanics.pdf"
                   >[en] Note on classical mechanics</a
+                ><br /><a
+                  href="docs/notes/notes-on-advanced-classical-physics.pdf"
+                  >[en] Note on advanced classical mechanics</a
                 >
               </p>
             </section>
