--- a/photography.html
+++ b/photography.html
@@ -13,16 +13,36 @@
       ><link rel="stylesheet" href="assets/css/noscript.css"
     /></noscript>
   </head>
-  <body>
-    <h1>My Photography Gallery</h1>
-      <div>
-        <img src="images/gallery/fulls/white_cliff.JPG" alt="Photo 1" />
+
+  <h1>Photography</h1>
+  <!-- Gallery -->
+  <div class="gallery style1 medium lightbox onscroll-fade-in">
+    <article>
+      <a href="images/gallery/fulls/white_cliff.JPG" class="image">
+        <img src="images/gallery/thumbs/white_cliff.jpeg" alt="" />
+      </a>
+      <div class="caption">
+        <h3>White Cliff</h3>
+        <p>Time</p>
+        <ul class="actions fixed">
+          <li><span class="button small">Details</span></li>
+        </ul>
       </div>
-      <!-- 添加更多图片 -->
-    <a
-      href="index.html"
-      style="display: block; text-align: center; margin-top: 20px"
-      >Go back to Home</a
-    >
-  </body>
+    </article>
+    <article>
+      <a href="images/gallery/fulls/02.jpg" class="image">
+        <img src="images/gallery/thumbs/02.jpg" alt="" />
+      </a>
+      <div class="caption">
+        <h3>Feugiat Lorem</h3>
+        <p>
+          Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed
+          ultrices.
+        </p>
+        <ul class="actions fixed">
+          <li><span class="button small">Details</span></li>
+        </ul>
+      </div>
+    </article>
+  </div>
 </html>
