--- a/photography.html
+++ b/photography.html
@@ -14,35 +14,50 @@
     /></noscript>
   </head>
 
-  <h1>Photography</h1>
-  <!-- Gallery -->
-  <div class="gallery style1 medium lightbox onscroll-fade-in">
-    <article>
-      <a href="images/gallery/fulls/white_cliff.JPG" class="image">
-        <img src="images/gallery/thumbs/white_cliff.jpeg" alt="" />
-      </a>
-      <div class="caption">
-        <h3>White Cliff</h3>
-        <p>Time</p>
-        <ul class="actions fixed">
-          <li><span class="button small">Details</span></li>
-        </ul>
+  <body class="is-preload">
+    <!-- Wrapper -->
+    <div id="wrapper" class="divided">
+      <!-- navigation bar -->
+      <section class="header invert color0">
+        <nav>
+          <a href="#home" class="button small smooth-scroll">Home</a>
+          <a href="#research" class="button small smooth-scroll">Research</a>
+          <a href="#notes" class="button small smooth-scroll">Notes</a>
+          <a href="/docs/CV_ChenHuang.pdf" class="button small">CV</a>
+        </nav>
+      </section>
+
+      <h1>Photography</h1>
+      <!-- Gallery -->
+      <div class="gallery style1 medium lightbox onscroll-fade-in">
+        <article>
+          <a href="images/gallery/fulls/white_cliff.JPG" class="image">
+            <img src="images/gallery/thumbs/white_cliff.jpeg" alt="" />
+          </a>
+          <div class="caption">
+            <h3>White Cliff</h3>
+            <p>Time</p>
+            <ul class="actions fixed">
+              <li><span class="button small">Details</span></li>
+            </ul>
+          </div>
+        </article>
+        <article>
+          <a href="images/gallery/fulls/02.jpg" class="image">
+            <img src="images/gallery/thumbs/02.jpg" alt="" />
+          </a>
+          <div class="caption">
+            <h3>Feugiat Lorem</h3>
+            <p>
+              Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed
+              ultrices.
+            </p>
+            <ul class="actions fixed">
+              <li><span class="button small">Details</span></li>
+            </ul>
+          </div>
+        </article>
       </div>
-    </article>
-    <article>
-      <a href="images/gallery/fulls/02.jpg" class="image">
-        <img src="images/gallery/thumbs/02.jpg" alt="" />
-      </a>
-      <div class="caption">
-        <h3>Feugiat Lorem</h3>
-        <p>
-          Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed
-          ultrices.
-        </p>
-        <ul class="actions fixed">
-          <li><span class="button small">Details</span></li>
-        </ul>
-      </div>
-    </article>
-  </div>
+    </div>
+  </body>
 </html>
