--- a/photography.html
+++ b/photography.html
@@ -20,9 +20,11 @@
       <!-- navigation bar -->
       <section class="header invert color0">
         <nav>
-          <a href="#home" class="button small smooth-scroll">Home</a>
-          <a href="#research" class="button small smooth-scroll">Research</a>
-          <a href="#notes" class="button small smooth-scroll">Notes</a>
+          <a href="index/#home" class="button small smooth-scroll">Home</a>
+          <a href="index/#research" class="button small smooth-scroll"
+            >Research</a
+          >
+          <a href="index/#notes" class="button small smooth-scroll">Notes</a>
           <a href="/docs/CV_ChenHuang.pdf" class="button small">CV</a>
         </nav>
       </section>
