--- a/photography.html
+++ b/photography.html
@@ -20,11 +20,21 @@
       <!-- navigation bar -->
       <section class="header invert color0">
         <nav>
-          <a href="index/#home" class="button small smooth-scroll">Home</a>
-          <a href="index/#research" class="button small smooth-scroll"
+          <a
+            href="https://chenx820.github.io"
+            class="button small smooth-scroll"
+            >Home</a
+          >
+          <a
+            href="https://chenx820.github.io/#research"
+            class="button small smooth-scroll"
             >Research</a
           >
-          <a href="index/#notes" class="button small smooth-scroll">Notes</a>
+          <a
+            href="https://chenx820.github.io/#notes"
+            class="button small smooth-scroll"
+            >Notes</a
+          >
           <a href="/docs/CV_ChenHuang.pdf" class="button small">CV</a>
         </nav>
       </section>
