--- a/photography.html
+++ b/photography.html
@@ -20,19 +20,11 @@
       <!-- navigation bar -->
       <section class="header invert color0">
         <nav>
-          <a
-            href="https://chenx820.github.io"
-            class="button small smooth-scroll"
-            >Home</a
-          >
-          <a
-            href="https://chenx820.github.io/#research"
-            class="button small smooth-scroll"
+          <a href="https://chenx820.github.io" class="button small">Home</a>
+          <a href="https://chenx820.github.io/#research" class="button small"
             >Research</a
           >
-          <a
-            href="https://chenx820.github.io/#notes"
-            class="button small smooth-scroll"
+          <a href="https://chenx820.github.io/#notes" class="button small"
             >Notes</a
           >
           <a href="/docs/CV_ChenHuang.pdf" class="button small">CV</a>
