--- a/photography.html
+++ b/photography.html
@@ -31,7 +31,17 @@
         </nav>
       </section>
 
-      <h1>Photography</h1>
+      <section
+        class="banner style5 orient-right content-align-center image-position-center fullscreen onload-image-fade-in onload-content-fade-down invert color1"
+        id="home"
+      >
+        <div class="content">
+          <h1>Photography</h1>
+        </div>
+        <div class="image">
+          <img src="images/banner.jpg" />
+        </div>
+      </section>
       <!-- Gallery -->
       <div class="gallery style1 medium lightbox onscroll-fade-in">
         <article>
@@ -62,65 +72,65 @@
           </div>
         </article>
         <article>
-            <a href="images/gallery/fulls/02.jpg" class="image">
-              <img src="images/gallery/thumbs/02.jpg" alt="" />
-            </a>
-            <div class="caption">
-              <h3>Feugiat Lorem</h3>
-              <p>
-                Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed
-                ultrices.
-              </p>
-              <ul class="actions fixed">
-                <li><span class="button small">Details</span></li>
-              </ul>
-            </div>
-          </article>
-          <article>
-            <a href="images/gallery/fulls/02.jpg" class="image">
-              <img src="images/gallery/thumbs/02.jpg" alt="" />
-            </a>
-            <div class="caption">
-              <h3>Feugiat Lorem</h3>
-              <p>
-                Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed
-                ultrices.
-              </p>
-              <ul class="actions fixed">
-                <li><span class="button small">Details</span></li>
-              </ul>
-            </div>
-          </article>
-          <article>
-            <a href="images/gallery/fulls/02.jpg" class="image">
-              <img src="images/gallery/thumbs/02.jpg" alt="" />
-            </a>
-            <div class="caption">
-              <h3>Feugiat Lorem</h3>
-              <p>
-                Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed
-                ultrices.
-              </p>
-              <ul class="actions fixed">
-                <li><span class="button small">Details</span></li>
-              </ul>
-            </div>
-          </article>
-          <article>
-            <a href="images/gallery/fulls/02.jpg" class="image">
-              <img src="images/gallery/thumbs/02.jpg" alt="" />
-            </a>
-            <div class="caption">
-              <h3>Feugiat Lorem</h3>
-              <p>
-                Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed
-                ultrices.
-              </p>
-              <ul class="actions fixed">
-                <li><span class="button small">Details</span></li>
-              </ul>
-            </div>
-          </article>
+          <a href="images/gallery/fulls/02.jpg" class="image">
+            <img src="images/gallery/thumbs/02.jpg" alt="" />
+          </a>
+          <div class="caption">
+            <h3>Feugiat Lorem</h3>
+            <p>
+              Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed
+              ultrices.
+            </p>
+            <ul class="actions fixed">
+              <li><span class="button small">Details</span></li>
+            </ul>
+          </div>
+        </article>
+        <article>
+          <a href="images/gallery/fulls/02.jpg" class="image">
+            <img src="images/gallery/thumbs/02.jpg" alt="" />
+          </a>
+          <div class="caption">
+            <h3>Feugiat Lorem</h3>
+            <p>
+              Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed
+              ultrices.
+            </p>
+            <ul class="actions fixed">
+              <li><span class="button small">Details</span></li>
+            </ul>
+          </div>
+        </article>
+        <article>
+          <a href="images/gallery/fulls/02.jpg" class="image">
+            <img src="images/gallery/thumbs/02.jpg" alt="" />
+          </a>
+          <div class="caption">
+            <h3>Feugiat Lorem</h3>
+            <p>
+              Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed
+              ultrices.
+            </p>
+            <ul class="actions fixed">
+              <li><span class="button small">Details</span></li>
+            </ul>
+          </div>
+        </article>
+        <article>
+          <a href="images/gallery/fulls/02.jpg" class="image">
+            <img src="images/gallery/thumbs/02.jpg" alt="" />
+          </a>
+          <div class="caption">
+            <h3>Feugiat Lorem</h3>
+            <p>
+              Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed
+              ultrices.
+            </p>
+            <ul class="actions fixed">
+              <li><span class="button small">Details</span></li>
+            </ul>
+          </div>
+        </article>
       </div>
     </div>
   </body>
