--- a/photography.html
+++ b/photography.html
@@ -42,14 +42,15 @@
           <img src="images/banner.jpg" />
         </div>
       </section>
-      <!-- Gallery -->
+
+      <!-- White Cliff -->
       <div class="gallery style1 medium lightbox onscroll-fade-in">
         <article>
           <a href="images/gallery/fulls/white_cliff.JPG" class="image">
             <img src="images/gallery/thumbs/white_cliff.jpeg" alt="" />
           </a>
           <div class="caption">
-            <h3>White Cliff</h3>
+            <h2>White Cliff</h2>
             <p>Time</p>
             <ul class="actions fixed">
               <li><span class="button small">Details</span></li>
