--- a/photography.html
+++ b/photography.html
@@ -31,11 +31,44 @@
         </nav>
       </section>
 
+      <!-- Home -->
       <section
         class="banner style5 orient-right content-align-center image-position-center fullscreen onload-image-fade-in onload-content-fade-down invert color1"
+        id="home"
       >
         <div class="content">
-          <h1>Photography</h1>
+          <h1>Chen Huang 黄晨</h1>
+          <ul class="icons">
+            <li>
+              <a href="#" class="icon brands style2 fa-twitter"
+                ><span class="label">Twitter</span></a
+              >
+            </li>
+            <li>
+              <a href="#" class="icon brands style2 fa-facebook-f"
+                ><span class="label">Facebook</span></a
+              >
+            </li>
+            <li>
+              <a href="#" class="icon brands style2 fa-instagram"
+                ><span class="label">Instagram</span></a
+              >
+            </li>
+            <li>
+              <a
+                href="https://www.linkedin.com/in/chen-huang-820x/"
+                class="icon brands style2 fa-linkedin-in"
+                ><span class="label">LinkedIn</span></a
+              >
+            </li>
+            <li>
+              <a
+                href="mailto:chen.huang23@imperial.ac.uk"
+                class="icon style2 fa-envelope"
+                ><span class="label">Email</span></a
+              >
+            </li>
+          </ul>
           <p class="major">
             👋 Hi, I'm Chen, a physics student at
             <b>Imperial College London</b>. My given name is "晨" (Chen),
@@ -45,6 +78,44 @@
             pronunciation for "orange" (橙). Because of this, my friends
             affectionately call me "橙子" (Chengzi) 🍊.
           </p>
+          <p class="major">
+            At Imperial College London, I focus on experimental work with
+            <b>semiconductor qubits</b> under the guidance of Dr. John
+            Michniewicz. Additionally, I'm a remote intern at the
+            <a href="http://en.baqis.ac.cn/"
+              ><b>Beijing Academy of Quantum Information Science (BAQIS)</b></a
+            >, where I work with Dr. Jingbo Wang on
+            <b>Rydberg atom quantum computing and compilation</b>.
+          </p>
+          <p class="major">
+            Theoretical research brings me the joy of creating new ideas, while
+            experimental work excites me as I witness "physics happening in the
+            lab." I am deeply passionate about both aspects of my research and
+            enjoy the unique challenges and rewards each offers.
+          </p>
+          <p class="major">
+            I am passionate about exploring the fascinating realms of Quantum
+            Computing and Quantum Information. Outside of academics, I enjoy
+            photography, traveling, reading, app development, and learning new
+            things.
+          </p>
+          <p class="major">
+            I am currently seeking a PhD position in
+            <b>Quantum Computing</b> and am always on the lookout for new
+            opportunities to expand my knowledge and skills. Whether through
+            collaborative projects, internships, or further academic research,
+            I'm eager to connect with like-minded individuals and organizations.
+            If you're interested in my research or potential collaboration,
+            please feel free to reach out! 📧
+          </p>
+
+          <ul class="actions stacked">
+            <li>
+              <a href="#research" class="button big wide smooth-scroll-middle"
+                >Get Started</a
+              >
+            </li>
+          </ul>
         </div>
         <div class="image">
           <img src="images/banner.jpg" />
