--- a/photography.html
+++ b/photography.html
@@ -37,16 +37,7 @@
         id="home"
       >
         <div class="content">
-          <h1>Chen Huang 黄晨</h1>
-          <p class="major">
-            👋 Hi, I'm Chen, a physics student at
-            <b>Imperial College London</b>. My given name is "晨" (Chen),
-            meaning "morning" in Chinese. I've always been a morning person,
-            drawn to the fresh air and peaceful start of each day.
-            Interestingly, "Chen" also sounds like "Cheng," which is the Chinese
-            pronunciation for "orange" (橙). Because of this, my friends
-            affectionately call me "橙子" (Chengzi) 🍊.
-          </p>
+          <h1>Photography</h1>
         </div>
         <div class="image">
           <img src="images/banner.jpg" />
