--- a/index.html
+++ b/index.html
@@ -191,6 +191,22 @@
       </section>
 
       <!-- Notes -->
+      <section>
+        <header>
+          <h3>Unordered List</h3>
+        </header>
+        <div class="content">
+          <h4>Default</h4>
+          <ul>
+            <li>Lorem ipsum dolor sit amet</li>
+            <li>Interdum adipiscing gravida odio</li>
+            <li>Porttitor sem non integer</li>
+            <li>Non faucibus ornare mi ut ante</li>
+            <li>Sagittis adipiscing eleifend</li>
+            <li>Felis amet dolore viverra</li>
+          </ul>
+        </div>
+      </section>
       <section class="wrapper style1 align-center invert color1" id="notes">
         <div class="inner">
           <h2>Notes</h2>
