--- a/index.html
+++ b/index.html
@@ -191,22 +191,33 @@
       </section>
 
       <!-- Notes -->
-      <section>
-        <header>
-          <h3>Unordered List</h3>
-        </header>
-        <div class="content">
-          <h4>Default</h4>
+      <section
+      class="spotlight style5 orient-left content-align-left image-position-center onscroll-image-fade-in invert color1"
+    >
+      <div class="content">
+        <h2>Notes</h2>
+        <h3>Quantum Information</h3>
+        <p>
           <ul>
-            <li>Lorem ipsum dolor sit amet</li>
+            <li><a href="docs/notes/notes-on-quantum-information.pdf"
+              >[en] Note on quantum information</a
+            ></li>
             <li>Interdum adipiscing gravida odio</li>
             <li>Porttitor sem non integer</li>
             <li>Non faucibus ornare mi ut ante</li>
             <li>Sagittis adipiscing eleifend</li>
             <li>Felis amet dolore viverra</li>
           </ul>
-        </div>
-      </section>
+        </p>
+        <ul class="actions stacked">
+          <li><a href="#" class="button">Learn More</a></li>
+        </ul>
+      </div>
+      <div class="image">
+        <img src="images/spotlight02.jpg" alt="" />
+      </div>
+    </section>
+
       <section class="wrapper style1 align-center invert color1" id="notes">
         <div class="inner">
           <h2>Notes</h2>
