--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@
           <p class="major">
             At Imperial College London, I focus on experimental work with
             <b>semiconductor qubits</b> under the guidance of Dr. John
-            Michniewicz. Additionally, I'm a remote intern at the
+            Michniewicz. Meanwhile, I'm a remote intern at the
             <a href="http://en.baqis.ac.cn/"
-              ><b>Beijing Academy of Quantum Information Science (BAQIS)</b></a
-            >, where I work with Dr. Jingbo Wang on
+              ><b>Beijing Academy of Quantum Information Sciences (BAQIS)</b></a
+            >, where I work with Dr. Jingbo Wang on 
             <b>Rydberg atom quantum computing and compilation</b>.
           </p>
           <p class="major">
