--- a/index.html
+++ b/index.html
@@ -182,9 +182,7 @@
             dolor sit amet.
           </p>
           <ul class="actions stacked">
-            <li><a href="https://patents.google.com/patent/CN117371547/en" class="button">Patent 1</a></li>
-            <li><a href="https://patents.google.com/patent/CN117454997/en" class="button">Patent 2</a></li>
-            <li><a href="https://patents.google.com/patent/CN117494829/en" class="button">Patent 3</a></li>
+            <li><a href="https://patents.google.com/patent/CN117371547/en" class="button">Patent 1</a><a href="https://patents.google.com/patent/CN117454997/en" class="button">Patent 2</a><a href="https://patents.google.com/patent/CN117494829/en" class="button">Patent 3</a></li>
           </ul>
         </div>
         <div class="image">
