--- a/index.html
+++ b/index.html
@@ -175,11 +175,7 @@
         <div class="content">
           <h2>Trapped-ion quantum computing</h2>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id
-            ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis
-            laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus,
-            pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum
-            dolor sit amet.
+            Calibration and control of trapped-ion qubits for quantum computing. 
           </p>
           <ul class="actions stacked">
             <li>
