--- a/index.html
+++ b/index.html
@@ -196,6 +196,24 @@
     >
       <div class="content">
         <h2>Notes</h2>
+        <button onclick="showContent('content1')">显示内容 1</button>
+    <button onclick="showContent('content2')">显示内容 2</button>
+    <button onclick="showContent('content3')">显示内容 3</button>
+
+    <div id="content">请选择一个按钮显示内容</div>
+
+    <script>
+        function showContent(content) {
+            const contentDiv = document.getElementById("content");
+            if (content === 'content1') {
+                contentDiv.innerHTML = "这是内容 1";
+            } else if (content === 'content2') {
+                contentDiv.innerHTML = "这是内容 2";
+            } else if (content === 'content3') {
+                contentDiv.innerHTML = "这是内容 3";
+            }
+        }
+    </script>
         <p>
           <h4>Quantum Information</h4>
           <ul>
