--- a/index.html
+++ b/index.html
@@ -191,16 +191,12 @@
       </section>
 
       <!-- Notes -->
-      <section
-      class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in invert color1"
-    >
+      <section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in invert color1">
       <div class="content">
         <h2>Notes</h2>
-        <button onclick="showContent('content1')">显示内容 1</button>
-    <button onclick="showContent('content2')">显示内容 2</button>
-    <button onclick="showContent('content3')">显示内容 3</button>
-
-    <div id="content">请选择一个按钮显示内容</div>
+        <button onclick="showContent('content1')">Imperial Course Notes</button>&nbsp;
+        <button onclick="showContent('content2')">HUST Course Notes</button>&nbsp;
+        <button onclick="showContent('content3')">PKU Notes</button>
 
     <script>
         function showContent(content) {
