--- a/index.html
+++ b/index.html
@@ -214,6 +214,9 @@
                 contentDiv.innerHTML = "这是内容 3";
             }
         }
+        window.onload = function() {
+            showContent('content1');
+        };
     </script>
         <p>
           <h4>Quantum Information</h4>
