--- a/index.html
+++ b/index.html
@@ -194,9 +194,9 @@
       <section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in invert color1">
       <div class="content">
         <h2>Notes</h2>
-        <button onclick="showContent('content1')">Imperial Course Notes</button>&nbsp;
-        <button onclick="showContent('content2')">HUST Course Notes</button>&nbsp;
-        <button onclick="showContent('content3')">PKU Notes</button>
+        <button onclick="showContent('content1')">Imperial 2023-2024</button>&nbsp;
+        <button onclick="showContent('content2')">HUST 2018-2022</button>&nbsp;
+        <button onclick="showContent('content3')">PKU 2020</button>
 
     <script>
         function showContent(content) {
