--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             Michniewicz. Meanwhile, I'm a remote intern at the
             <a href="http://en.baqis.ac.cn/"
               ><b>Beijing Academy of Quantum Information Sciences (BAQIS)</b></a
-            >, where I work with Dr. Jingbo Wang on 
+            >, where I work with Dr. Jingbo Wang on
             <b>Rydberg atom quantum computing and compilation</b>.
           </p>
           <p class="major">
@@ -175,13 +175,25 @@
         <div class="content">
           <h2>Trapped-ion quantum computing</h2>
           <p>
-            Calibration and control of trapped-ion qubits for quantum computing. 
+            Calibration and control of trapped-ion qubits for quantum computing.
           </p>
           <ul class="actions stacked">
             <li>
-              <a href="https://patents.google.com/patent/CN117371547/en" class="button">Patent 1</a>
-              <a href="https://patents.google.com/patent/CN117454997/en" class="button">Patent 2</a>
-              <a href="https://patents.google.com/patent/CN117494829/en" class="button">Patent 3</a>
+              <a
+                href="https://patents.google.com/patent/CN117371547/en"
+                class="button"
+                >Patent 1</a
+              >
+              <a
+                href="https://patents.google.com/patent/CN117454997/en"
+                class="button"
+                >Patent 2</a
+              >
+              <a
+                href="https://patents.google.com/patent/CN117494829/en"
+                class="button"
+                >Patent 3</a
+              >
             </li>
           </ul>
         </div>
@@ -191,54 +203,45 @@
       </section>
 
       <!-- Notes -->
-      <section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in invert color1">
-      <div class="content">
-        <h2>Notes</h2>
-        <button onclick="showContent('content1')">Imperial 2023-2024</button>&nbsp;
-        <button onclick="showContent('content2')">HUST 2018-2022</button>&nbsp;
-        <button onclick="showContent('content3')">PKU 2020</button>
-
-    <script>
-        function showContent(content) {
-            const contentDiv = document.getElementById("content");
-            if (content === 'content1') {
+      <section
+        class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in invert color1"
+      >
+        <div class="content">
+          <h2>Notes</h2>
+          <button onclick="showContent('content1')">Imperial 2023-2024</button
+          >&nbsp;
+          <button onclick="showContent('content2')">HUST 2018-2022</button
+          >&nbsp;
+          <button onclick="showContent('content3')">PKU 2020</button>
+          <div id="content"></div>
+          <script>
+            function showContent(content) {
+              const contentDiv = document.getElementById("content");
+              if (content === "content1") {
                 contentDiv.innerHTML = `
                   <h4>Quantum Information</h4>
                   <ul>
                     <li><a href="docs/notes/notes-on-quantum-information.pdf">[en] Note on quantum information</a></li>
                   </ul>
                 `;
-            } else if (content === 'content2') {
+              } else if (content === "content2") {
                 contentDiv.innerHTML = "这是内容 2";
-            } else if (content === 'content3') {
+              } else if (content === "content3") {
                 contentDiv.innerHTML = "这是内容 3";
+              }
             }
-        }
-        window.onload = function() {
-            showContent('content1');
-        };
-    </script>
-        <p>
-          <h4>Quantum Information</h4>
-          <ul>
-            <li><a href="docs/notes/notes-on-quantum-information.pdf"
-              >[en] Note on quantum information</a
-            ></li>
-            <li>Interdum adipiscing gravida odio</li>
-            <li>Porttitor sem non integer</li>
-            <li>Non faucibus ornare mi ut ante</li>
-            <li>Sagittis adipiscing eleifend</li>
-            <li>Felis amet dolore viverra</li>
+            window.onload = function () {
+              showContent("content1");
+            };
+          </script>
+          <ul class="actions stacked">
+            <li><a href="#" class="button">Learn More</a></li>
           </ul>
-        </p>
-        <ul class="actions stacked">
-          <li><a href="#" class="button">Learn More</a></li>
-        </ul>
-      </div>
-      <div class="image">
-        <img src="images/spotlight02.jpg" alt="" />
-      </div>
-    </section>
+        </div>
+        <div class="image">
+          <img src="images/spotlight02.jpg" alt="" />
+        </div>
+      </section>
 
       <section class="wrapper style1 align-center invert color1" id="notes">
         <div class="inner">
