--- a/index.html
+++ b/index.html
@@ -205,6 +205,7 @@
       <!-- Notes -->
       <section
         class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in invert color1"
+        id="notes"
       >
         <div class="content">
           <h2>Notes</h2>
@@ -243,7 +244,7 @@
         </div>
       </section>
 
-      <section class="wrapper style1 align-center invert color1" id="notes">
+      <section class="wrapper style1 align-center invert color1">
         <div class="inner">
           <h2>Notes</h2>
           <p>😊</p>
