--- a/index.html
+++ b/index.html
@@ -212,8 +212,8 @@
           <button onclick="showContent('content1')">Imperial 2023-2024</button
           >&nbsp;
           <button onclick="showContent('content2')">HUST 2018-2022</button
-          >&nbsp;
-          <button onclick="showContent('content3')">PKU 2020</button>
+          >&nbsp; <button onclick="showContent('content3')">PKU 2020</button
+          ><br />
           <div id="content"></div>
           <script>
             function showContent(content) {
