--- a/index.html
+++ b/index.html
@@ -226,6 +226,15 @@
                     <li><a href="docs/notes/notes-on-quantum-information.pdf">[en] Note on quantum information</a></li>
                   </ul>
                   </div>
+                  <h4>Alternate</h4>
+                <ul class="alt">
+                  <li><a href="docs/notes/notes-on-quantum-information.pdf">Quantum Information</a></li>
+                  <li>Interdum adipiscing gravida odio</li>
+                  <li>Porttitor sem non integer</li>
+                  <li>Non faucibus ornare mi ut ante</li>
+                  <li>Sagittis adipiscing eleifend</li>
+                  <li>Felis amet dolore viverra</li>
+                </ul>
                 `;
               } else if (content === "content2") {
                 contentDiv.innerHTML = "这是内容 2";
