--- a/index.html
+++ b/index.html
@@ -228,12 +228,10 @@
                   </div>
                   <h4>Alternate</h4>
                 <ul class="alt">
-                  <li><a href="docs/notes/notes-on-quantum-information.pdf">Quantum Information</a></li>
-                  <li>Interdum adipiscing gravida odio</li>
-                  <li>Porttitor sem non integer</li>
-                  <li>Non faucibus ornare mi ut ante</li>
-                  <li>Sagittis adipiscing eleifend</li>
-                  <li>Felis amet dolore viverra</li>
+                  <li>Quantum Information <a href="docs/notes/notes-on-quantum-information.pdf">🔍</a></li>
+                  <li>Mathematical Methods for Physicists <a href="docs/notes/notes-on-mathematical-methods-for-physicists.pdf">🔍</a></li>
+                  <li>Advanced Classical Mechanics <a href="docs/notes/notes-on-advanced-classical-physics.pdf">🔍</a></li>
+                  <li>Quantum Optics <a href="docs/notes/notes-on-quantum-optics.pdf">🔍</a></li>
                 </ul>
                 `;
               } else if (content === "content2") {
