--- a/index.html
+++ b/index.html
@@ -222,10 +222,11 @@
                 contentDiv.innerHTML = `
                 <div class="content">
                   <ul class="alt">
-                    <li>Quantum Information <a href="docs/notes/notes-on-quantum-information.pdf">🔍</a></li>
-                    <li>Mathematical Methods for Physicists <a href="docs/notes/notes-on-mathematical-methods-for-physicists.pdf">🔍</a></li>
-                    <li>Advanced Classical Mechanics <a href="docs/notes/notes-on-advanced-classical-physics.pdf">🔍</a></li>
-                    <li>Quantum Optics <a href="docs/notes/notes-on-quantum-optics.pdf">🔍</a></li>
+                    <li>Quantum Information <a href="docs/notes/notes-on-quantum-information.pdf">Note</a></li>
+                    <li>Mathematical Methods for Physicists <a href="docs/notes/notes-on-mathematical-methods-for-physicists.pdf">Note</a></li>
+                    <li>Advanced Classical Mechanics <a href="docs/notes/notes-on-advanced-classical-physics.pdf">Note</a></li>
+                    <li>Quantum Optics <a href="docs/notes/notes-on-quantum-optics.pdf">Note</a></li>
+                    <li>Quantum Theory of Matter <a href="docs/notes/notes-on-quantum-theory-of-matter.pdf">Note</a></li>
                   </ul>
                 </div>
                 `;
