--- a/index.html
+++ b/index.html
@@ -207,8 +207,8 @@
         class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in invert color1"
         id="notes"
       >
+        <header><h2>Notes</h2></header>
         <div class="content">
-          <h2>Notes</h2>
           <button onclick="showContent('content1')">Imperial 2023-2024</button
           >&nbsp;
           <button onclick="showContent('content2')">HUST 2018-2022</button
