--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
               const contentDiv = document.getElementById("content");
               if (content === "content1") {
                 contentDiv.innerHTML = `
-                <div></div>
+                <div style="height: 20px;"></div>
                   <ul class="alt">
                     <li>Quantum Information <a href="docs/notes/notes-on-quantum-information.pdf">Note</a></li>
                     <li>Mathematical Methods for Physicists <a href="docs/notes/notes-on-mathematical-methods-for-physicists.pdf">Note</a></li>
