--- a/index.html
+++ b/index.html
@@ -232,14 +232,12 @@
               } else if (content === "content2") {
                 contentDiv.innerHTML = `
                   <ul class="alt">
-                    <li>[en] 理论力学学习笔记<a href="docs/notes/note-on-classical-mechanics.pdf">Note</a></li>
-                    <li>[zh] 数学物理方程课堂笔记 <a href="docs/notes/[数学物理方程]课堂笔记.pdf">Note</a></li>
-                    <li>[zh] 量子力学学习笔记 <a href="docs/notes/[量子力学]学习笔记.pdf">Note</a></li>
-                    <li>[zh] 量子力学期末复习笔记 <a href="docs/notes/[量子力学]期末偷分宝典.pdf">Note</a></li>
-                    <li>[zh] 高等量子力学学习笔记 <a href="docs/notes/[高等量子力学]课堂笔记.pdf">Note</a></li>
-                    <li>[zh] 量子光学学习笔记 <a href="docs/notes/[量子光学]学习笔记.pdf">Note</a></li>
-                    <li>[zh] 量子光学期末复习笔记 <a href="docs/notes/[量子光学]复习笔记.pdf">Note</a></li>
-                    <li>[zh] 固体物理期末复习笔记 <a href="docs/notes/[固体物理]期末复习笔记.pdf">Note</a></li>
+                    <li>理论力学<a href="docs/notes/note-on-classical-mechanics.pdf">Note</a></li>
+                    <li>数学物理方程 <a href="docs/notes/[数学物理方程]课堂笔记.pdf">Note</a></li>
+                    <li>量子力学 <a href="docs/notes/[量子力学]学习笔记.pdf">Note</a> <a href="docs/notes/[量子力学]期末偷分宝典.pdf">Review</a></li>
+                    <li>高等量子力学 <a href="docs/notes/[高等量子力学]课堂笔记.pdf">Note</a></li>
+                    <li>量子光学 <a href="docs/notes/[量子光学]学习笔记.pdf">Note</a> <a href="docs/notes/[量子光学]复习笔记.pdf">Review</a></li>
+                    <li>固体物理 <a href="docs/notes/[固体物理]期末复习笔记.pdf">Review</a></li>
                   </ul>
                 `;
               } else if (content === "content3") {
