--- a/index.html
+++ b/index.html
@@ -222,22 +222,22 @@
               if (content === "content1") {
                 contentDiv.innerHTML = `
                   <ul class="alt">
-                    <li>Quantum Information <a href="docs/notes/notes-on-quantum-information.pdf">Note</a></li>
-                    <li>Mathematical Methods for Physicists <a href="docs/notes/notes-on-mathematical-methods-for-physicists.pdf">Note</a> <a href="docs/notes/revision-for-2024-mmp-exam.pdf">Review</a></li>
-                    <li>Advanced Classical Mechanics <a href="docs/notes/notes-on-advanced-classical-physics.pdf">Note</a></li>
-                    <li>Quantum Optics <a href="docs/notes/notes-on-quantum-optics.pdf">Note</a></li>
-                    <li>Quantum Theory of Matter <a href="docs/notes/notes-on-quantum-theory-of-matter.pdf">Note</a></li>
+                    <li>Quantum Information <a href="docs/notes/notes-on-quantum-information.pdf">📖Note</a></li>
+                    <li>Mathematical Methods for Physicists <a href="docs/notes/notes-on-mathematical-methods-for-physicists.pdf">📖Note</a> <a href="docs/notes/revision-for-2024-mmp-exam.pdf">🤔Review</a></li>
+                    <li>Advanced Classical Mechanics <a href="docs/notes/notes-on-advanced-classical-physics.pdf">📖Note</a></li>
+                    <li>Quantum Optics <a href="docs/notes/notes-on-quantum-optics.pdf">📖Note</a></li>
+                    <li>Quantum Theory of Matter <a href="docs/notes/notes-on-quantum-theory-of-matter.pdf">📖Note</a></li>
                   </ul>
                 `;
               } else if (content === "content2") {
                 contentDiv.innerHTML = `
                   <ul class="alt">
-                    <li>理论力学 <a href="docs/notes/note-on-classical-mechanics.pdf">Note</a></li>
-                    <li>数学物理方程 <a href="docs/notes/[数学物理方程]课堂笔记.pdf">Note</a></li>
-                    <li>量子力学 <a href="docs/notes/[量子力学]学习笔记.pdf">Note</a> <a href="docs/notes/[量子力学]期末偷分宝典.pdf">Review</a></li>
-                    <li>高等量子力学 <a href="docs/notes/[高等量子力学]课堂笔记.pdf">Note</a></li>
-                    <li>量子光学 <a href="docs/notes/[量子光学]学习笔记.pdf">Note</a> <a href="docs/notes/[量子光学]复习笔记.pdf">Review</a></li>
-                    <li>固体物理 <a href="docs/notes/[固体物理]期末复习笔记.pdf">Review</a></li>
+                    <li>理论力学 <a href="docs/notes/note-on-classical-mechanics.pdf">📖Note</a></li>
+                    <li>数学物理方程 <a href="docs/notes/[数学物理方程]课堂笔记.pdf">📖Note</a></li>
+                    <li>量子力学 <a href="docs/notes/[量子力学]学习笔记.pdf">📖Note</a> <a href="docs/notes/[量子力学]期末偷分宝典.pdf">🤔Review</a></li>
+                    <li>高等量子力学 <a href="docs/notes/[高等量子力学]课堂笔记.pdf">📖Note</a></li>
+                    <li>量子光学 <a href="docs/notes/[量子光学]学习笔记.pdf">📖Note</a> <a href="docs/notes/[量子光学]复习笔记.pdf">🤔Review</a></li>
+                    <li>固体物理 <a href="docs/notes/[固体物理]期末复习笔记.pdf">🤔Review</a></li>
                   </ul>
                 `;
               } else if (content === "content3") {
