--- a/index.html
+++ b/index.html
@@ -183,12 +183,12 @@
                 href="https://patents.google.com/patent/CN117371547/en"
                 class="button"
                 >Patent 1</a
-              >
+              >&nbsp;
               <a
                 href="https://patents.google.com/patent/CN117454997/en"
                 class="button"
                 >Patent 2</a
-              >
+              >&nbsp;
               <a
                 href="https://patents.google.com/patent/CN117494829/en"
                 class="button"
@@ -248,9 +248,6 @@
               showContent("content1");
             };
           </script>
-          <ul class="actions stacked">
-            <li><a href="#" class="button">Learn More</a></li>
-          </ul>
         </div>
         <div class="image">
           <img src="images/spotlight02.jpg" alt="" />
