--- a/index.html
+++ b/index.html
@@ -241,7 +241,11 @@
                   </ul>
                 `;
               } else if (content === "content3") {
-                contentDiv.innerHTML = "这是内容 3";
+                contentDiv.innerHTML = `
+                  <ul class="alt">
+                    <li>量子力学(II) <a href="docs/notes/Ch1_Phase in QM">1 </a></li>
+                  </ul>
+                `;
               }
             }
             window.onload = function () {
