--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
               <img src="images/gallery/thumbs/white_cliff.jpeg" alt="" />
             </a>
             <div class="caption">
-              <h3>White Cliff</h3>
+              <h3>White Cliff, UK</h3>
               <p>Time</p>
               <ul class="actions fixed">
                 <li><span class="button small">Details</span></li>
@@ -290,10 +290,10 @@
           </article>
           <article>
             <a href="images/gallery/fulls/02.jpg" class="image">
-              <img src="images/gallery/thumbs/02.jpg" alt="" />
+              <img src="images/gallery/fulls/switzerland2.JPG" alt="" />
             </a>
             <div class="caption">
-              <h3>Feugiat Lorem</h3>
+              <h3>Lungern, Switzerland</h3>
               <p>
                 Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed
                 ultrices.
