--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
             <b>Imperial College London</b>. My given name is "晨" (Chen),
             meaning "morning" in Chinese. I've always been a morning person,
             drawn to the fresh air and peaceful start of each day.
-            Interestingly, "Chen" also sounds like "Cheng," which is the Chinese
+            Interestingly, "Chen" also sounds like "cheng", which is the Chinese
             pronunciation for "orange" (橙). Because of this, my friends
-            affectionately call me "橙子" (Chengzi) 🍊.
+            affectionately call me "橙子" (chengzi, orange) 🍊.
           </p>
           <p class="major">
             At Imperial College London, I focus on experimental work with
