--- a/index.html
+++ b/index.html
@@ -238,6 +238,7 @@
                     <li>高等量子力学  [<a href="docs/notes/[高等量子力学]课堂笔记.pdf">Note</a>]</li>
                     <li>量子光学  [<a href="docs/notes/[量子光学]学习笔记.pdf">Note</a>]  [<a href="docs/notes/[量子光学]复习笔记.pdf">Review</a>]</li>
                     <li>固体物理  [<a href="docs/notes/[固体物理]期末复习笔记.pdf">Review</a>]</li>
+                    <li>模拟电子技术  [<a href="docs/notes/[模拟电子技术]笔记_Part1">Note 1</a>] [<a href="docs/notes/[模拟电子技术]笔记_Part2">Note 2</a>] [<a href="docs/notes/[模拟电子技术]笔记_Part3">Note 3</a>] [<a href="docs/notes/[模拟电子技术]笔记_Part4">Note 4</a>] [<a href="docs/notes/[模拟电子技术]笔记_Part5">Note 5</a>]</li>
                   </ul>
                 `;
               } else if (content === "content3") {
