--- a/index.html
+++ b/index.html
@@ -232,13 +232,18 @@
               } else if (content === "content2") {
                 contentDiv.innerHTML = `
                   <ul>
+                    <li>复变函数  [<a href="docs/notes/[复变函数]期末复习笔记.pdf">Review</a>]</li>
                     <li>理论力学  [<a href="docs/notes/note-on-classical-mechanics.pdf">Note</a>]</li>
+                    <li>光学  [<a href="docs/notes/[光学]课堂笔记_Part1.pdf">Note 1</a>] [<a href="docs/notes/[光学]课堂笔记_Part2.pdf">Note 2</a>] [<a href="docs/notes/[光学]课堂笔记_Part3.pdf">Note 3</a>] [<a href="docs/notes/[光学]课堂笔记_Part4.pdf">Note 4</a>]</li>
+                    <li>电磁学  [<a href="docs/notes/[电磁学]期末复习笔记.pdf">Review</a>]</li>
+                    <li>电动力学  [<a href="docs/notes/[电动力学]期末偷分宝典.pdf">Review</a>]</li>
                     <li>数学物理方程  [<a href="docs/notes/[数学物理方程]课堂笔记.pdf">Note</a>]</li>
                     <li>量子力学  [<a href="docs/notes/[量子力学]学习笔记.pdf">Note</a>]  [<a href="docs/notes/[量子力学]期末偷分宝典.pdf">Review</a>]</li>
                     <li>高等量子力学  [<a href="docs/notes/[高等量子力学]课堂笔记.pdf">Note</a>]</li>
-                    <li>热力学与统计物理  [<a href="docs/notes/[电动力学]学习笔记.pdf">Note</a>]</li>
+                    <li>热力学与统计物理  [<a href="docs/notes/note-on-statistical-physics.pdf">Note</a>]</li>
                     <li>量子光学  [<a href="docs/notes/[量子光学]学习笔记.pdf">Note</a>]  [<a href="docs/notes/[量子光学]复习笔记.pdf">Review</a>]</li>
                     <li>固体物理  [<a href="docs/notes/[固体物理]期末复习笔记.pdf">Review</a>]</li>
+                    <li>等离子体导论  [<a href="docs/notes/[等离子体导论]课堂笔记.pdf">Review</a>]</li>
                     <li>模拟电子技术  [<a href="docs/notes/[模拟电子技术]笔记_Part1.pdf">Note 1</a>] [<a href="docs/notes/[模拟电子技术]笔记_Part2.pdf">Note 2</a>] [<a href="docs/notes/[模拟电子技术]笔记_Part3.pdf">Note 3</a>] [<a href="docs/notes/[模拟电子技术]笔记_Part4.pdf">Note 4</a>] [<a href="docs/notes/[模拟电子技术]笔记_Part5.pdf">Note 5</a>]</li>
                     <li>数字电子技术  [<a href="docs/notes/[数字电子技术]笔记_Part1.pdf">Note 1</a>] [<a href="docs/notes/[数字电子技术]笔记_Part2.pdf">Note 2</a>] [<a href="docs/notes/[数字电子技术]笔记_Part3.pdf">Note 3</a>] [<a href="docs/notes/[数字电子技术]笔记_Part4.pdf">Note 4</a>] [<a href="docs/notes/[数字电子技术]笔记_Part5.pdf">Note 5</a>]</li>
                   </ul>
