--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <a href="#home" class="button small smooth-scroll">Home</a>
           <a href="#research" class="button small smooth-scroll">Research</a>
           <a href="#notes" class="button small smooth-scroll">Notes</a>
-          <a href="/docs/CV_ChenHuang.pdf" class="button small">CV</a>
+          <a href="#" class="button small">CV</a>
         </nav>
       </section>
 
@@ -101,9 +101,7 @@
             things.
           </p>
           <p class="major">
-            I am currently seeking a PhD position in
-            <b>Quantum Computing</b> and am always on the lookout for new
-            opportunities to expand my knowledge and skills. Whether through
+            I am always on the lookout for new opportunities to expand my knowledge and skills. Whether through
             collaborative projects, internships, or further academic research,
             I'm eager to connect with like-minded individuals and organizations.
             If you're interested in my research or potential collaboration,
@@ -131,11 +129,7 @@
         <div class="content">
           <h2>Rydberg atom computing and compilation</h2>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id
-            ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis
-            laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus,
-            pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum
-            dolor sit amet.
+            ...
           </p>
           <ul class="actions stacked">
             <li><a href="#" class="button">Learn More</a></li>
@@ -153,11 +147,7 @@
         <div class="content">
           <h2>Charge noise in semiconductor qubits for quantum computing</h2>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id
-            ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis
-            laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus,
-            pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum
-            dolor sit amet.
+            ...
           </p>
           <ul class="actions stacked">
             <li><a href="#" class="button">Learn More</a></li>
