--- a/index.html
+++ b/index.html
@@ -101,11 +101,12 @@
             things.
           </p>
           <p class="major">
-            I am always on the lookout for new opportunities to expand my knowledge and skills. Whether through
-            collaborative projects, internships, or further academic research,
-            I'm eager to connect with like-minded individuals and organizations.
-            If you're interested in my research or potential collaboration,
-            please feel free to reach out! 📧
+            I am always on the lookout for new opportunities to expand my
+            knowledge and skills. Whether through collaborative projects,
+            internships, or further academic research, I'm eager to connect with
+            like-minded individuals and organizations. If you're interested in
+            my research or potential collaboration, please feel free to reach
+            out! 📧
           </p>
 
           <ul class="actions stacked">
@@ -128,9 +129,7 @@
       >
         <div class="content">
           <h2>Rydberg atom computing and compilation</h2>
-          <p>
-            ...
-          </p>
+          <p>...</p>
           <ul class="actions stacked">
             <li><a href="#" class="button">Learn More</a></li>
           </ul>
@@ -146,9 +145,7 @@
       >
         <div class="content">
           <h2>Charge noise in semiconductor qubits for quantum computing</h2>
-          <p>
-            ...
-          </p>
+          <p>...</p>
           <ul class="actions stacked">
             <li><a href="#" class="button">Learn More</a></li>
           </ul>
@@ -217,6 +214,8 @@
                     <li>Advanced Classical Mechanics  [<a href="docs/notes/notes-on-advanced-classical-physics.pdf">Note</a>]</li>
                     <li>Quantum Optics  [<a href="docs/notes/notes-on-quantum-optics.pdf">Note</a>]</li>
                     <li>Quantum Theory of Matter  [<a href="docs/notes/notes-on-quantum-theory-of-matter.pdf">Note</a>]</li>
+                    <li>Laser Device Technology  [<a href="docs/notes/notes-on-laser-device-technology.pdf">Note</a>]</li>
+                    <li>Nonlinear Optics  [<a href="docs/notes/notes-on-nonlinear-optics.pdf">Note</a>]</li>
                   </ul>
                 `;
               } else if (content === "content2") {
