--- a/index.html
+++ b/index.html
@@ -40,22 +40,12 @@
             <li>
               <a href="#">Research</a>
               <ul>
-                <li><a href="#">Rydberg quantum compilation</a></li>
-                <li><a href="#">Magna phasellus</a></li>
-                <li><a href="#">Etiam dolore nisl</a></li>
-                <li>
-                  <a href="#">And a submenu &hellip;</a>
-                  <ul>
-                    <li><a href="#">Lorem ipsum dolor</a></li>
-                    <li><a href="#">Phasellus consequat</a></li>
-                    <li><a href="#">Magna phasellus</a></li>
-                    <li><a href="#">Etiam dolore nisl</a></li>
-                  </ul>
-                </li>
-                <li><a href="#">Veroeros feugiat</a></li>
+                <li><a href="rydberg-quantum-compilation">Rydberg quantum compilation</a></li>
+                <li><a href="#">Trapped-ion quantum computing</a></li>
+                <li><a href="#">Charge noise in semiconductor qubits</a></li>
               </ul>
             </li>
-            <li><a href="left-sidebar.html">Left Sidebar</a></li>
+            <li><a href="notes.html"></a>Notes</li>
             <li><a href="right-sidebar.html">Right Sidebar</a></li>
             <li><a href="no-sidebar.html">No Sidebar</a></li>
           </ul>
