--- a/index.html
+++ b/index.html
@@ -40,13 +40,17 @@
             <li>
               <a href="#">Research</a>
               <ul>
-                <li><a href="rydberg-quantum-compilation">Rydberg quantum compilation</a></li>
+                <li>
+                  <a href="rydberg-quantum-compilation"
+                    >Rydberg quantum compilation</a
+                  >
+                </li>
                 <li><a href="#">Trapped-ion quantum computing</a></li>
                 <li><a href="#">Charge noise in semiconductor qubits</a></li>
               </ul>
             </li>
+            <li><a href="no-sidebar.html">Publications</a></li>
             <li><a href="notes.html"></a>Notes</li>
-            <li><a href="right-sidebar.html">Right Sidebar</a></li>
             <li><a href="no-sidebar.html">No Sidebar</a></li>
           </ul>
         </nav>
