--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <li><a href="#">Charge noise in semiconductor qubits</a></li>
               </ul>
             </li>
-            <li><a href="no-sidebar.html">Publications</a></li>
+            <li><a href="publications.html">Publications</a></li>
             <li><a href="notes.html"></a>Notes</li>
             <li><a href="no-sidebar.html">No Sidebar</a></li>
           </ul>
