--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
   <head>
-    <title>Helios by HTML5 UP</title>
+    <title>Chen Huang</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -26,7 +26,7 @@
           <header>
             <h1><a href="index.html" id="logo">Chen Huang</a></h1>
             <hr />
-            <p>Another fine freebie by HTML5 UP</p>
+            <p>Welcome to my physics world</p>
           </header>
           <footer>
             <a href="#banner" class="button circled scrolly">Start</a>
