--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
   <head>
-    <title>Chen Huang</title>
+    <title>Chen's Physics World</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
