--- a/publications.html
+++ b/publications.html
@@ -6,7 +6,7 @@
 -->
 <html>
   <head>
-    <title>No Sidebar - Helios by HTML5 UP</title>
+    <title>Chen's Physics World</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
