--- a/publications.html
+++ b/publications.html
@@ -24,7 +24,7 @@
         <!-- Inner -->
         <div class="inner">
           <header>
-            <h1><a href="index.html" id="logo">Chen Huang</a></h1>
+            <h1><a href="index.html" id="logo">Chen's Physics World</a></h1>
           </header>
         </div>
 
