--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
         <!-- Inner -->
         <div class="inner">
           <header>
-            <h1><a href="index.html" id="logo">Chen Huang</a></h1>
+            <h1><a href="index.html" id="logo">Chen Huang 黄晨</a></h1>
             <hr />
-            <p>Welcome to my physics world</p>
+            <p>Welcome to Chen's Physics World!</p>
           </header>
           <footer>
             <a href="#banner" class="button circled scrolly">Start</a>
