--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <!-- Inner -->
         <div class="inner">
           <header>
-            <h1><a href="index.html" id="logo">Chen Huang 黄晨</a></h1>
+            <h1><a href="index.html" id="logo">Chen Huang / 黄晨</a></h1>
             <hr />
             <p>Welcome to Chen's Physics World!</p>
           </header>
