--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <p>Welcome to Chen's Physics World!</p>
           </header>
           <footer>
-            <a href="#banner" class="button circled scrolly">Start</a>
+            <a href="#banner" class="button scrolly">Start</a>
           </footer>
         </div>
 
